# steering-vectors-agents

./: .gitignore  README.md  pyproject.toml
baselines/: __init__.py
baselines/prompting/: __init__.py  refusal_prompt.py
data/eval_sets/: benign_prompts.json  harmful_prompts.json
docs/: conclusions.md  failure_cases.md  tradeoffs.md
experiments/configs/: gemma2_9b_refusal.yaml  gpt_oss_20b_refusal.yaml  mistral_7b_refusal.yaml  qwen3_8b_refusal.yaml
experiments/scripts/: agent_demo.py  create_composition_viz.py  create_visualizations.py  demo_langchain_steering.py  evaluate_composition.py  evaluate_composition_layers.py  evaluate_composition_orthogonal.py  evaluate_hierarchy.py  evaluate_hierarchy_negated.py  evaluate_steering.py  evaluate_uncertainty.py  extract_behavior_vector.py  extract_refusal_vector.py  extract_vectors.py  smoke_test.py
results/: COMPOSITION_RESULTS.md  MULTI_BEHAVIOR_RESULTS.md  REFUSAL_STEERING_RESULTS.md
results/logs/: experiment_gemma2_9b_refusal.md  experiment_mistral_7b_refusal.md  experiment_qwen3_8b_refusal.md
results/metrics/: composition_evaluation.json  composition_layers_evaluation.json  composition_orthogonal_evaluation.json  hierarchy_evaluation_fair_mistral_7b_instruct_v0.2.json  hierarchy_negated_test.json  refusal_evaluation.json  refusal_evaluation_fair.json  refusal_evaluation_fair_gemma_2_9b_it.json  refusal_evaluation_fair_mistral_7b_instruct_v0.2.json  uncertainty_evaluation_fair_mistral_7b_instruct_v0.2.json
src/steering_vectors_agents/: __init__.py
src/steering_vectors_agents/core/: configs.py  hooks.py  injection.py  vectors.py
src/steering_vectors_agents/datasets/: __init__.py  base.py
src/steering_vectors_agents/evaluation/: analysis.py  llm_judge.py  metrics.py
src/steering_vectors_agents/extraction/: caa.py
src/steering_vectors_agents/integrations/: __init__.py
src/steering_vectors_agents/integrations/langchain/: steered_agent.py  steered_chat.py  steered_llm.py
tests/core/: test_hooks.py  test_injection.py  test_vectors.py
